# personalify

./: .codeiumignore  .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY_GUIDE.md  Dockerfile  README.md  dashboard.py  dev.bat  docker-compose.yml  error_log_multimodal.txt  old_nlp.py  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  render.yaml  render.yml  requirements.txt  resize_icon.py  temp_routes.py  tsconfig.json  vercel.json
api/: cache.ts  index.py  log.ts  monitor.ts  proxy.js  status.ts
backend/: README.md  requirements.txt
backend/app/: admin.py  auth.py  cache_handler.py  db_handler.py  genius_lyrics.py  lastfm_handler.py  main.py  mongo_handler.py  nlp_handler.py  qstash_handler.py  routes.py  spotify_handler.py  stats.py  stats_booster.py
backend/public/: index.html  style.css
docs/: api-reference.mdx  introduction.mdx  mint.json  openapi.json
docs/endpoints/: analyze.mdx  stats.mdx
flutter/: README.md  pubspec.yaml
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt
flutter/windows/: CMakeLists.txt
frontend/: README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  (+2 more)
mobile/: README.md  fix_icons.bat  pubspec.yaml
notebook/: emotion-results.csv  genius-lyrics-dataset.csv  genius-lyrics-preprocessed.csv  sentiment-analysis.ipynb  temp-songs-data.csv
notebooks/: sentiment-analysis.ipynb
streamlit/: dashboard.py  requirements.txt
supabase/: config.toml
vercel-deploy/: package.json  vercel.json
(+181 files in other folders)
