[project]
name = "personalify-backend"
version = "0.1.0"
description = "Backend for Personalify"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "requests",
    "python-dotenv",
    "psycopg2-binary",
    "redis",
    "pymongo[srv]",
    "jinja2",
    "huggingface_hub",
    "deep-translator",
    "beautifulsoup4",
    "qstash",
    "scalar-fastapi",
    "httpx",
    "gradio_client"
]
